<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>human_description</name>
  <version>0.0.4</version>
  <description>The human_description package</description>

  <maintainer email="bolotnikov@lirmm.fr">Anastasia Bolotnikova</maintainer>
  <maintainer email="arn.tanguy@gmail.com">Arnaud TANGUY</maintainer>

  <license>TODO</license>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <build_depend>xacro</build_depend>

   <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
